feat(M8-Integration): 阶段 1 - 过程存储基础设施
实现 InMemoryReusableProcedureStore 作为集成验证的基础设施。

核心实现：
- InMemoryReusableProcedureStore: 内存中的可重用过程存储
- 实现 ReusableProcedureStore 接口（M8-A 定义）
- 支持修订管理（按 procedureId 组织）
- 并发安全（ConcurrentHashMap + CopyOnWriteArrayList）

存储语义：
- createRevision: 创建新修订（拒绝重复）
- findRevision: 查找特定修订
- listRevisions: 列出所有修订（按 revision 排序）
- findByIntent: 按 scope + intentKey 查找
- updateStatus: 更新修订状态（不可变替换）

测试辅助方法：
- findLatest: 查找最新修订
- findAll: 查找所有过程
- findByScope: 按 scope 查找
- clear: 清空存储
- size: 获取总数

V1 简化：
- 无持久化（重启后丢失）
- 无事务支持
- 简单并发控制（无复杂锁）

测试: 292/292 通过
- InMemoryReusableProcedureStoreTest (8 测试)
- 所有现有测试保持通过

下一步（阶段 2）：
- ProcedureCandidateExtractor（从成功执行中学习）
- 集成到 SpringAiToolCallingEngine
- 自动持久化候选

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>